--- a/01-00-welcome/01-00-welcome.Rmd
+++ b/01-00-welcome/01-00-welcome.Rmd
@@ -64,3 +64,32 @@ Best practices for configuring and deploying infrastructure for teaching data sc
 | 11:00 - 12:30 | Course management with GitHub           |
 | 12:30 - 12:45 | Break                                   |
 | 12:45 - 13:30 | Assessment and feedback                 |
+
+---
+
+class: center, middle
+
+# Framing
+
+---
+
+## Main context
+
+An introductory data science course that 
+
+- provides a common (gateway) experience to students wanting to get started with stats
+- is modern
+- places data front and center
+- is quantitative (but without math prereqs)
+- is different than HS statistics
+- is challenging, but not intimidating
+
+---
+
+## Other uses for the computational infrastructure
+
+- An applied statistics course
+- A statistical computing course
+- A case studies course
+- A project-based capstone course
+- ...
