--- a/01-03-rmarkdown/01-03-rmarkdown.Rmd
+++ b/01-03-rmarkdown/01-03-rmarkdown.Rmd
@@ -106,7 +106,7 @@ You got some data.
 - Ultimate goal: Visualize the total number of goals for each World Cup over time.
 
 .instructions[
-Open `world-cup-goals.Rmd`. Knit the document. Then, update the **yaml** with your information, and knit again.
+Go to the project called **World Cup Goals** on RStudio Cloud and open  `world-cup-goals.Rmd`. Knit the document. Then, update the **yaml** with your information, and knit again.
 ]
 
 ---
@@ -165,14 +165,12 @@ up-to-date.
 
 --
 
-- Get rid of your `.Rprofile`, especially if you have anything in there relating 
-to `knitr`, `markdown`, `rmarkdown`, and RStudio.
-
---
-
 - Set a global option for `error = TRUE` (or for a given chunk) so that your 
 document renders even when there are errors.
 
 --
 
-- Don’t try to change working directory within an R Markdown document. (If you do still decide to use setwd in a code chunk, beware that the new working directory will only apply to that specific code chunk, and any following code chunks will revert back to use the original working directory.)
+- Don’t try to change working directory within an R Markdown document. (If you 
+do still decide to use setwd in a code chunk, beware that the new working 
+directory will only apply to that specific code chunk, and any following code 
+chunks will revert back to use the original working directory.)
