--- a/01-00-welcome/01-00-welcome.Rmd
+++ b/01-00-welcome/01-00-welcome.Rmd
@@ -38,17 +38,18 @@ Colin Rundel
 
 Overview of the toolkit for doing data science and design principles for teaching it
 
-| Time          | Activity                                |
-|:--------------|:----------------------------------------|
-| 09:30 - 09:45 | Welcome                                 |
-| 09:45 - 10:15 | Getting started                         |
-| 10:15 - 10:45 | Designing an intro data science course  |
-| 10:45 - 11:00 | Break                                   |
-| 11:00 - 11:15 | Computing with R and RStudio            |
-| 11:15 - 12:00 | Literate programming with R Markdown    |
-| 12:00 - 12:30 | Data analysis with the tidyverse        |
-| 12:30 - 12:45 | Break                                   |
-| 12:45 - 13:30 | Version control with Git and GitHub     |
+.midi[
+| Time          | Activity                                                    |
+|:--------------|:------------------------------------------------------------|
+| 09:30 - 09:45 | [Welcome](https://htmlpreview.github.io/?https://github.com/mine-cetinkaya-rundel/teach-data-sci-icots2018/blob/master/01-00-welcome/01-00-welcome.html) |
+| 09:45 - 10:15 | [Getting started](https://github.com/mine-cetinkaya-rundel/teach-data-sci-icots2018/blob/master/01-01-start/01-01-start.html)                                                  |
+| 10:15 - 10:30 | [Computing with R and RStudio](https://htmlpreview.github.io/?https://github.com/mine-cetinkaya-rundel/teach-data-sci-icots2018/blob/master/01-02-r-rstudio/01-02-r-rstudio.html)           |
+| 10:30 - 10:45 | Break
+| 10:45 - 11:30 | [Literate programming with R Markdown](https://htmlpreview.github.io/?https://github.com/mine-cetinkaya-rundel/teach-data-sci-icots2018/blob/master/01-04-rmarkdown/01-04-rmarkdown.html)          |
+| 11:30 - 11:45 | [Data analysis with the tidyverse](https://htmlpreview.github.io/?https://github.com/mine-cetinkaya-rundel/teach-data-sci-icots2018/blob/master/01-04-tidyverse/01-04-tidyverse.html)         |
+| 10:30 - 10:45 | Break
+| 12:00 - 13:00 | [Version control with Git and GitHub](https://htmlpreview.github.io/?https://github.com/mine-cetinkaya-rundel/teach-data-sci-icots2018/blob/master/01-06-git/01-06-git.html)                        |
+| 13:00 - 13:30 | [A first course in data science](https://github.com/mine-cetinkaya-rundel/teach-data-sci-icots2018/blob/master/01-06-intro-ds/01-06-intro-ds.pdf)   ]
 
 ---
 
@@ -56,6 +57,7 @@ Overview of the toolkit for doing data science and design principles for teachin
 
 Best practices for configuring and deploying infrastructure for teaching data science
 
+.midi[
 | Time          | Activity                                |
 |:--------------|:----------------------------------------|
 | 09:30 - 09:45 | Welcome                                 |
@@ -64,6 +66,7 @@ Best practices for configuring and deploying infrastructure for teaching data sc
 | 11:00 - 12:30 | Course management with GitHub           |
 | 12:30 - 12:45 | Break                                   |
 | 12:45 - 13:30 | Assessment and feedback                 |
+]
 
 ---
 
