--- a/02-03-management/02-03-management.Rmd
+++ b/02-03-management/02-03-management.Rmd
@@ -116,7 +116,7 @@ devtools::install_github("rundel/ghclass")
 These tokens can be created [here](https://github.com/settings/tokens) and once created can be saved as `~/.github/token` or assigned to the `GITHUB_TOKEN` environmentval variable.
 
 If the token is found and works correctly the following code should run without error,
-```{r}
+```{r message=FALSE}
 library(ghclass)
 test_github_token()
 ```
@@ -126,7 +126,7 @@ test_github_token()
 ## ghclass - Inviting students
 
 ```{r eval=FALSE}
-users = c("Alice","Bob","Carol","Dave","Eve")
+users <- c("Alice", "Bob", "Carol", "Dave", "Eve")
 
 invite_user("icots10-data-sci", users, verbose = TRUE)
 ```
@@ -144,20 +144,20 @@ invite_user("icots10-data-sci", users, verbose = TRUE)
 ## ghclass - Student status
 
 ```{r}
-ghclass::get_members("icots10-data-sci")
+get_members("icots10-data-sci")
 ```
 
 ```{r}
-ghclass::get_pending_members("icots10-data-sci")
+get_pending_members("icots10-data-sci")
 ```
 
 ---
 
-## 4. Create assignment(s).
+## 4. Create assignment(s)
 
 There are a few moving parts here, so we will break it down into several steps. For each assignment we do the following:
 
-1. Create a (public) template repository
+1. Create a (public) template repository that contains starter documents for an assignment
 
 2. Create (private) individual / team repositories
 
@@ -179,15 +179,15 @@ There are a few moving parts here, so we will break it down into several steps. 
 users = c("Alice","Bob","Carol","Dave","Eve")
 
 create_individual_repo("icots10-data-sci", users, 
-                       prefix = "demo-")
+                       prefix = "hw01-")
 ```
 
 ```
-## Creating demo-Alice for Alice ...
-## Creating demo-Bob for Bob ...
-## Creating demo-Carol for Carol ...
-## Creating demo-Dave for Dave ...
-## Creating demo-Eve for Eve ...
+## Creating hw01-Alice for Alice ...
+## Creating hw01-Bob for Bob ...
+## Creating hw01-Carol for Carol ...
+## Creating hw01-Dave for Dave ...
+## Creating hw01-Eve for Eve ...
 ```
 
 ---
