--- a/02-03-management/02-03-management.Rmd
+++ b/02-03-management/02-03-management.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Course management with GitHub"
+title: "Course management <br/> with GitHub"
 subtitle: "Teaching Data Science, Reproducibly <br> @ ICOTS 2018"
 author: "Mine Çetinkaya-Rundel & Colin Rundel"
 date: "July 8, 2018"
@@ -25,6 +25,14 @@ Enter your GitHub account in the following google sheet:
 .center[.large[
 http://bit.ly/icots-gh
 ]]
+
+---
+
+## Goals
+
+* Centralize the distribution and collection of all student assignments
+
+* Force students to use version control
 
 ---
 
@@ -226,7 +234,7 @@ mirror_repo(
 ```
 
 ```
-## Cloning source repo (Sta523-Fa17/hw2) ...
+## Cloning source repo (icots10-data-sci/hw01) ...
 ## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Alice ...
 ## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Bob ...
 ## Mirroring icots10-data-sci/hw01 to icots10-data-sci/hw01-Carol ...
@@ -253,7 +261,7 @@ You all now should have your own private copy of the demo repository within the 
 
 ## Alternative - GitHub classroom
 
-
+Available here - https://classroom.github.com/classrooms
 
 .center[
 ![](img/classroom.png)
