--- a/02-03-management/02-03-management.Rmd
+++ b/02-03-management/02-03-management.Rmd
@@ -249,13 +249,24 @@ mirror_repo(
 
 You all now should have your own private copy of the demo repository within the `icots10-data-sci` organization.
 
-* Go to the page for *your* repo
+* Go to the page for *your* hw01 repo
 
 * Copy the *https* git url for your repo using the clone button.
 
-* Use that url to open a copy of the repo inside of RStudio Cloud
+* Use that url to create a new project in RStudio Cloud from git
 
-* Complete the described exercise.
+* Complete theexercise and commit and push your work as described in `hw01.Rmd`.
+
+<br/>
+
+.midi[
+*Reminder* - before you will be to push you will need to run the following commands in RStudio Cloud's terminal:
+
+```shell
+git config --global user.email "your email"
+git config --global user.name "your name"
+```
+]
 
 ---
 
